# secret_agent

./: .env.example  .gitignore  Cargo.toml  README.md  app_spec.md
src/: config.rs  core.rs  error.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/domain/: mod.rs  models.rs  traits.rs
src/parser/: mod.rs  mod.tool.rs.bak
src/proposer/: mod.rs
src/validator/: mod.rs
tests/: integration_test.rs
tests/data/: Calculator.pm  OrderManager.pm  calculator_analysis.json
