[package]
name = "secret_agent"
version = "0.1.0"
edition = "2021"
description = "A tool for refactoring Perl modules using AI"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
async-trait = "0.1.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
async-openai = "0.28.0"
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13.1"
pretty_assertions = "1.4"
tempfile = "3.9"
wiremock =0.6.3.5"
