[package]
name = "secret_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15.0"
rig-core = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.12"
tokio = { version = "1.36.0", features = ["full"] }
tempdir = "0.3.7"

[dev-dependencies]
tempfile = "3.10.1"
wiremock = "0.6.0"
test-context = "0.4.1"
test-case = "3.3.1"
more-asserts = "0.3.1"
